[package]
name = "chambers"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
gtfs-realtime = "0.2.0"
gtfs-structures = "=0.44.0"
phf = { version = "0.12.1", features = ["macros"] }
prost = "0.14.1"
reqwest = { version = "0.12.22", features = ["rustls-tls", "gzip"] }
tokio = { version = "1.46.1", features = ["full"] }
